docs: Add comprehensive environment setup guide
- Create detailed environment-setup-guide.md for collaborators
- Update .gitignore to include essential VS Code configurations
- Add VS Code settings template for consistent development environment
- Current main.cpp serves as environment validation target

Collaborators can now clone and verify their setup by running the basic Qt window.

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,11 @@ Makefile
 *.cmake
 
 # 忽略IDE配置文件
-.vscode/
+.vscode/c_cpp_properties.json
+.vscode/tasks.json
+# 保留重要的项目配置文件
+# .vscode/settings.json      # 包含Qt和CMake路径配置
+# .vscode/launch.json        # 包含调试配置
 .idea/
 
 # 忽略日志和临时文件
