docs: re-add AI_Interface_Spec.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
-cmake_minimum_required(VERSION 3.5) # CMake install : https://cmake.org/download/
+cmake_minimum_required(VERSION 3.5)
 project(ai-devour-evolve LANGUAGES CXX)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # 根据编译器选择Qt路径
 if(MSVC)
-    set(CMAKE_PREFIX_PATH "D:/qt/6.9.1/msvc2022_64;D:/tools/libtorch-cpu/libtorch") # Qt Kit Dir and LibTorch Dir
+    set(CMAKE_PREFIX_PATH "D:/qt/6.9.1/msvc2022_64;D:/tools/libtorch-cpu/libtorch")
     message(STATUS "Using MSVC compiler with Qt MSVC build")
 elseif(MINGW)
-    set(CMAKE_PREFIX_PATH "D:/qt/6.9.1/mingw_64;D:/tools/libtorch-cpu/libtorch") # Qt Kit Dir and LibTorch Dir
+    set(CMAKE_PREFIX_PATH "D:/qt/6.9.1/mingw_64;D:/tools/libtorch-cpu/libtorch")
     message(STATUS "Using MinGW compiler with Qt MinGW build")
 else()
     message(WARNING "Unknown compiler, trying MSVC paths")
@@ -24,7 +24,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(USE_CUDA OFF)
 set(CUDA_TOOLKIT_ROOT_DIR "")
 
-find_package(Qt6 COMPONENTS Widgets REQUIRED) # Qt COMPONENTS
+# 查找 Qt6 组件
+find_package(Qt6 COMPONENTS Core Gui Widgets Network REQUIRED)
 find_package(Torch REQUIRED)
 
 # 过滤掉MSVC特定的编译标志，如果使用MinGW的话
@@ -47,103 +48,95 @@ if(WIN32 AND MINGW)
     endforeach()
 endif()
 
-aux_source_directory(./src srcs)
-
-# 明确指定源文件（推荐方式，更精确控制）
+# 源文件与头文件列表（按你的完整实现文件名列表）
 set(SOURCES
     src/main.cpp
-    src/DemoQtVS.cpp
-    src/GameView.cpp
-    src/PlayerCell.cpp
-    src/FoodItem.cpp
-    # 新的球类系统
-    src/BaseBall.cpp
-    src/CloneBall.cpp
-    src/FoodBall.cpp
-    src/SporeBall.cpp
-    src/ThornsBall.cpp
-    src/GameManager.cpp
-    # 空间分区优化
-    src/QuadTree.cpp
+    src/Physics.cpp
+    src/Utils.cpp
+    
+    src/PlayerBall.cpp
+    src/Player.cpp
+    src/Food.cpp
+    src/Spore.cpp
+    src/Thorn.cpp
+    src/ScoreManager.cpp
+    src/GameController.cpp
+    src/HumanController.cpp
+    src/AIController.cpp
+    src/GameWindow.cpp
+    src/StartScreen.cpp
+    src/GameOverScreen.cpp
 )
 
 set(HEADERS
-    src/DemoQtVS.h
-    src/GameView.h
-    src/PlayerCell.h
-    src/FoodItem.h
-    # 新的球类系统
-    src/GoBiggerConfig.h
-    src/BaseBall.h
-    src/CloneBall.h
-    src/FoodBall.h
-    src/SporeBall.h
-    src/ThornsBall.h
-    src/GameManager.h
-    # 空间分区优化
+    src/Physics.h
+    src/Utils.h
     src/QuadTree.h
+    src/QuadTree_impl.h
+    src/PlayerBall.h
+    src/Player.h
+    src/Food.h
+    src/Spore.h
+    src/Thorn.h
+    src/ScoreManager.h
+    src/GameController.h
+    src/HumanController.h
+    src/AIController.h
+    src/GameWindow.h
+    src/StartScreen.h
+    src/GameOverScreen.h
 )
 
 set(UI_FILES
-    src/DemoQtVS.ui
-    # 未来添加更多UI文件时在这里列出
+    # 如果有Qt Designer生成的.ui文件，可以在这里添加
 )
 
-# Specify MSVC UTF-8 encoding   
 add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
 add_executable(${PROJECT_NAME}
-    WIN32 # If you need a terminal for debug, please comment this statement 
+    WIN32
     ${SOURCES}
     ${HEADERS}
     ${UI_FILES}
-)
+ "src/Ball.h" "src/Ball.cpp")
 
-# 设置头文件包含目录
 target_include_directories(${PROJECT_NAME} PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
-    ${CMAKE_CURRENT_BINARY_DIR}  # 为自动生成的MOC文件
-) 
+    ${CMAKE_CURRENT_BINARY_DIR}
+)
 
-# 将Qt6和Torch的库链接到我们的程序上
 target_link_libraries(${PROJECT_NAME} PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Widgets
+    Qt6::Network
     "${TORCH_LIBRARIES}"
 )
 
-# 对于Windows，解决LibTorch的一个常见链接问题
 if(WIN32)
     target_compile_definitions(${PROJECT_NAME} PRIVATE -D_GLIBCXX_USE_CXX11_ABI=0)
-    # 只在MinGW下禁用某些警告
     if(MINGW)
         target_compile_options(${PROJECT_NAME} PRIVATE -Wno-deprecated-declarations)
     endif()
-    # MSVC特定设置
     if(MSVC)
         target_compile_options(${PROJECT_NAME} PRIVATE /W3)
-        # 设置为多线程运行库
         set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
     endif()
 endif()
 
-# 为将来的开发添加一些有用的编译定义
 target_compile_definitions(${PROJECT_NAME} PRIVATE
-    QT_DISABLE_DEPRECATED_BEFORE=0x060000  # 禁用Qt 6.0之前的废弃API
+    QT_DISABLE_DEPRECATED_BEFORE=0x060000
     $<$<CONFIG:Debug>:DEBUG>
     $<$<CONFIG:Release>:NDEBUG>
 )
 
-# 安装规则（可选）
 install(TARGETS ${PROJECT_NAME}
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
-# 打印配置信息
 message(STATUS "Project: ${PROJECT_NAME}")
 message(STATUS "Qt found: ${Qt6_VERSION}")
 message(STATUS "Torch found: ${Torch_VERSION}")
