--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,15 @@ env/
 # 忽略系统文件
 .DS_Store
 Thumbs.db
+
+# 忽略所有自动保存的模型
+scripts/models/auto_save_*.zip
+
+# 忽略所有训练过程中的中间checkpoint和stats
+scripts/checkpoints/model_*.zip
+scripts/checkpoints/checkpoint_*.zip
+scripts/checkpoints/stats_*.json
+
+# 只保留最终模型（如 PPO_gobigger_enhanced_final.zip）
+!scripts/models/PPO_gobigger_enhanced_final.zip
+!scripts/models/PPO_gobigger_standard_final.zip
